# kdepp

./: LICENSE  README.md  meson.build
include/kdepp/: kde.h
